<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_for_ovio"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="107dp"
            android:layout_height="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="0dp"
            android:src="@drawable/ovio_logo_top" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:background="@color/blue_for_ovio"
            android:fontFamily="@font/nanumsquareeb"
            android:gravity="center_vertical|start"
            android:paddingLeft="10dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:weightSum="100" />

        <TextView
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:fontFamily="@font/nanumsquarer"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/txt_total_spent_time"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:weightSum="100" />

        <TextView
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:fontFamily="@font/nanumsquareeb"
            android:gravity="center_vertical|end"
            android:paddingLeft="10dp"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:weightSum="100" />

        <TextView
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:fontFamily="@font/nanumsquarel"
            android:gravity="center_vertical|start"
            android:paddingLeft="10dp"
            android:text="sec"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:weightSum="100" />

        <TextView
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:fontFamily="@font/nanumsquareeb"
            android:gravity="center_vertical|end"
            android:paddingLeft="10dp"
            android:text="@string/txt_start_time"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:weightSum="100" />

        <TextView
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="16"
            android:fontFamily="@font/nanumsquarel"
            android:gravity="center_vertical|end"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="00/00/00 00:00:00"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:weightSum="100" />

        <TextView
            android:id="@+id/tv_current_version"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="18"
            android:fontFamily="@font/nanumsquarel"
            android:gravity="center_vertical|end"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/txt_current_version"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:weightSum="100" />

        <LinearLayout
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:weightSum="100">

            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:fontFamily="@font/nanumsquarel"
            android:gravity="center_vertical|end"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Ver.0.1"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:weightSum="100"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:weightSum="100"
            android:visibility="gone">

            <TextView
                android:id="@+id/btn_activity_quit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:fontFamily="@font/nanumsquarer"
                android:background="@color/red_01"
                android:textColor="@color/white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:text="@string/txt_close_for_button"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <!-- 타이틀바 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_popup_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_01"
        android:padding="10dp">

        <!-- 가운데 타이틀 -->
        <TextView
            android:id="@+id/tv_popup_header_title"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:fontFamily="@font/nanumsquarer"
            android:gravity="center"
            android:text="@string/txt_system_setting"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- 우측 끝에 배치할 뷰 (예: 아이콘/버튼) -->
        <ImageButton
            android:id="@+id/ib_header_action"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/settings_24dp_ffffff_fill0_wght400_grad0_opsz24"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            android:padding="4dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- //end 타이틀바 -->

    <!-- Notice -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="0dp">

        <LinearLayout
            android:id="@+id/ll_list_header"
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:orientation="horizontal"
            android:background="@color/grey_01"
            android:padding="5dp"
            android:layout_gravity="center">

            <!-- 체크박스 -->
            <CheckBox
                android:id="@+id/cb_item_check_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/grey_01"
                android:visibility="gone"
                android:buttonTint="@android:color/white"
                android:padding="10dp" />

            <!-- 노출 여부 토글 스위치 -->
            <Switch
                android:id="@+id/switch_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/grey_01"
                android:padding="5dp"
                android:text="노출"
                android:visibility="gone"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:padding="0dp"
                android:visibility="gone"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="100"
                    android:background="@color/grey_01"
                    android:fontFamily="@font/nanumsquarer"
                    android:gravity="center_vertical|center"
                    android:padding="0dp"
                    android:text="@string/txt_no"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <!--
            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:background="#FFD9FA" />
            -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="35"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="100"
                    android:background="@color/grey_01"
                    android:fontFamily="@font/nanumsquarer"
                    android:gravity="center|center_vertical"
                    android:padding="10dp"
                    android:text="@string/txt_system_setting_item_name"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:orientation="horizontal"
                android:weightSum="75">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="30"
                    android:background="@color/grey_01"
                    android:fontFamily="@font/nanumsquarer"
                    android:gravity="center_vertical|center"
                    android:padding="10dp"
                    android:text="@string/txt_system_setting_item_value"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:orientation="horizontal"
                android:padding="0dp"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="100"
                    android:background="@color/grey_01"
                    android:fontFamily="@font/nanumsquarer"
                    android:gravity="center"
                    android:text="@string/txt_setting_datetime"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:weightSum="100" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/grey_01"
                    android:fontFamily="@font/nanumsquarer"
                    android:gravity="center_vertical|center"
                    android:padding="0dp"
                    android:text="@string/txt_change"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/lv_process_result_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_param_from_parent"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:alpha="0.87"
            android:gravity="center"
            android:text="data"
            android:textColor="#000000"
            android:textSize="24sp" />
    </LinearLayout>
    <!-- Notice -->

    <!--
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#66bdbdbd" />
        -->

    <!-- 닫기 버튼 -->
    <!--// 닫기 버튼 -->
</LinearLayout>


    <!--
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Close Activity"
        android:src="@drawable/view_timeline_24dp_ffffff_fill0_wght400_grad0_opsz24"
        app:maxImageSize="40dp"
        app:backgroundTint="@color/blue_for_ovio"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab_chart"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="Refresh Activity"
    android:src="@drawable/area_chart_24dp_ffffff_fill0_wght400_grad0_opsz24"
    app:maxImageSize="40dp"
    app:backgroundTint="@color/blue_for_ovio"
    app:tint="@android:color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginEnd="95dp"
    android:layout_marginBottom="16dp" />
    -->

    <!--
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_info_list_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="메일 전달"
        android:src="@drawable/mail_24dp_ffffff_fill0_wght400_grad0_opsz24"
        android:enabled="false"
        app:maxImageSize="40dp"
        app:backgroundTint="@color/gray_04"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_toggle_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="목록 체크"
        android:src="@drawable/ic_check_box_white_24dp"
        app:maxImageSize="40dp"
        app:backgroundTint="@color/blue_for_ovio"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="16dp" />
    -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="창 닫기"
        android:src="@drawable/ic_close_white_24dp"
        app:maxImageSize="40dp"
        app:backgroundTint="@color/blue_for_ovio"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>